# game-master

Backend Engineer Challenge/: .env.default  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  servers.py  tox.ini
Backend Engineer Challenge/app/: settings.py  urls.py
Backend Engineer Challenge/conf/: nginx  start.sh  supervisord.conf
Backend Engineer Challenge/players/: api.py  models.py  serializers.py
Backend Engineer Challenge/players/migrations/: 0001_initial.py  0002_alter_player_name.py  0003_playerban.py
Backend Engineer Challenge/servers/: api.py  models.py  serializers.py
Backend Engineer Challenge/servers/migrations/: 0001_initial.py
Backend Engineer Challenge/utils/: mixins.py
